13 May 2018
update: move check for width/height to after if proxy url exists
remove: image proxy default url
update: enable latest forum posts on index page

12 May 2018
request: allow any alphanumeric character in username #4
update: require all new users or change username to use function valid_username

11 May 2018
update: cleanup process runs in perpetuity once started
fix: incorrect implementation of autoclean perpetuity

10 May 2018
update: cleanup process select all scripts that need processing instead of just 1

9 May 2018
fix: format_username in pm_system

19 Apr 2018
fix: fully revert navvbar changes
fix: README typo #3
fix: newest user block shows user id instead of formatted user name #1
fix: site stats not populating
fix: call getUserFromId() with array instead of id

18 Apr 2018
update: README
fix: incorrect var for users id
update: cookie lifetime to 1 as default
fix: site not working without redis installed and used as php session handler

17 Apr 2018
update: README
4 Mar 2018
update: composer.json require php extensions

3 Mar 2018
update: README, removed test sites
update: db files
add: stock forums(mostly done, but not happy with it)
add: cache insert/update AJAX Chat user online, only hit db once per 60 sec per user
fix: php-cs-fixer @Symfony reversing if comparisons(yoda style)

25 Feb 2018
fix: global user expecting users data, instead of class instance
fix: announce update not updating peers cache
add: stock forums

23 Feb 2018
cleanup: add additional rules to php-cs-fixer(will run before any new commits)
revert: use globals in functions, until all moved to classes(i'm still learning)
remove: class destructors
remove: persistent connections to pdo
add: @Symfony to php-cs-fixer default rules

22 Feb 2018
add: destructor to classes
add: persistent connections to pdo

21 Feb 2018
move: project classes to src
add: namespace to project classes
move: manage jquery with npm
fix: usercp.php password change